--- a/d1.html
+++ b/d1.html
@@ -33,37 +33,37 @@
          <a id="detail-menu" class="d1" onclick="menu(m1);">조선일보</a>
          <p></p>
          <ul id="m1">
-            <li><a href="/j1.html">[단독] 현직 법원장 "尹영장 재판에 문제"... 판사들 찬반 격론</a></li>
-            <li><a href="/j2.html">글자2</a></li>
-            <li><a href="/j3.html">글자3</a></li>
-            <li><a href="/j4.html">글자4</a></li>
+            <li><a href="/NEWS/j1.html">[단독] 현직 법원장 "尹영장 재판에 문제"... 판사들 찬반 격론</a></li>
+            <li><a href="/NEWS/j2.html">글자2</a></li>
+            <li><a href="/NEWS/j3.html">글자3</a></li>
+            <li><a href="/NEWS/j4.html">글자4</a></li>
           </ul>
         </li>
         <li class="second">
           <a id="detail-menu" class="d2" onclick="menu(m2);">동아일보</a><p></p>
           <ul id="m2">
-            <li><a href="/d1.html">“발레 접고 근육 운동 10년…이제 세계 ‘톱3’ 노려요”[양종구의 100세 시대 건강법]</a></li>
-            <li><a href="/d2.html">글자2</a></li>
-            <li><a href="/d3.html">글자3</a></li>
-            <li><a href="/d4.html">글자4</a></li>
+            <li><a href="/NEWS/d1.html">“발레 접고 근육 운동 10년…이제 세계 ‘톱3’ 노려요”[양종구의 100세 시대 건강법]</a></li>
+            <li><a href="/NEWS/d2.html">글자2</a></li>
+            <li><a href="/NEWS/d3.html">글자3</a></li>
+            <li><a href="/NEWS/d4.html">글자4</a></li>
           </ul>
         </li>
         <li>
           <a id="detail-menu" class="d3" onclick="menu(m3);">중앙일보</a><p></p>
           <ul id="m3">
-            <li><a href="/a1.html">눈 펑펑, 최대 30㎝ 쌓인다…"도로마비" 귀성길 초비상</a></li>
-            <li><a href="/a2.html">글자2</a></li>
-            <li><a href="/a3.html">글자3</a></li>
-            <li><a href="/a4.html">글자4</a></li>
+            <li><a href="/NEWS/a1.html">눈 펑펑, 최대 30㎝ 쌓인다…"도로마비" 귀성길 초비상</a></li>
+            <li><a href="/NEWS/a2.html">글자2</a></li>
+            <li><a href="/NEWS/a3.html">글자3</a></li>
+            <li><a href="/NEWS/a4.html">글자4</a></li>
           </ul>
         </li>
         <li class="second">
           <a id="detail-menu" class="d4" onclick="menu(m4);">경향신문</a><p></p>
           <ul id="m4">
-            <li><a href="/g1.html">국힘 “검찰, 공수처 기소 하청기관 전락···검찰총장 사퇴해야”</a></li>
-            <li><a href="/g2.html">글자2</a></li>
-            <li><a href="/g3.html">글자3</a></li>
-            <li><a href="/g4.html">글자4</a></li>
+            <li><a href="/NEWS/g1.html">국힘 “검찰, 공수처 기소 하청기관 전락···검찰총장 사퇴해야”</a></li>
+            <li><a href="/NEWS/g2.html">글자2</a></li>
+            <li><a href="/NEWS/g3.html">글자3</a></li>
+            <li><a href="/NEWS/g4.html">글자4</a></li>
          </ul>
        </li>
      </ul>
